# mobile-robot

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.json
inc/app/: application.hpp  config.hpp
inc/common/: common.hpp  mode.hpp  types.hpp
inc/entity/: robot.hpp  target.hpp
inc/graphics/: hud.hpp  renderer.hpp
inc/map/: map.hpp  mapGenerator.hpp  obstacle.hpp
inc/nav/: aStarPathPlanner.hpp  bfsPathPlanner.hpp  pathPlanner.hpp
src/: main.cpp
src/app/: application.cpp  config.cpp
src/entity/: robot.cpp  target.cpp
src/graphics/: hud.cpp  renderer.cpp
src/map/: map.cpp  mapGenerator.cpp
src/nav/: aStarPathPlanner.cpp  bfsPathPlanner.cpp  pathPlanner.cpp
